<resources>
    <string name="app_name">CodeChallenge060619</string>
    <string name="select_an_image_id">Select an Image Id</string>
    <string name="format">format:</string>
    <string name="width">width:</string>
    <string name="height">height:</string>
    <string name="filename">filename:</string>
    <string name="id">id:</string>
    <string name="author">author:</string>
    <string name="author_url">author_url</string>
    <string name="post_url">post_url</string>
</resources>
