<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".view.DetailActivity">

    <TextView
            android:text="@string/format"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView2" 
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="30dp" 
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="30dp"/>
    <TextView
            android:text="@string/width"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView3"
            app:layout_constraintStart_toStartOf="@+id/textView2"
            android:layout_marginTop="10dp"
            app:layout_constraintTop_toBottomOf="@+id/textView2"/>
    <TextView
            android:text="@string/height"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView4" 
            app:layout_constraintStart_toStartOf="@+id/textView2"
            android:layout_marginTop="10dp"
            app:layout_constraintTop_toBottomOf="@+id/textView3"/>
    <TextView
            android:text="@string/filename"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView5" 
            app:layout_constraintStart_toStartOf="@+id/textView2"
            android:layout_marginTop="10dp"
            app:layout_constraintTop_toBottomOf="@+id/textView4"/>
    <TextView
            android:text="@string/id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView6" 
            app:layout_constraintStart_toStartOf="@+id/textView2"
            android:layout_marginTop="10dp"
            app:layout_constraintTop_toBottomOf="@+id/textView5"/>
    <TextView
            android:text="@string/author"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView7" 
            app:layout_constraintStart_toStartOf="@+id/textView2"
            android:layout_marginTop="10dp"
            app:layout_constraintTop_toBottomOf="@+id/textView6"/>
    <TextView
            android:text="@string/author_url"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView8" 
            app:layout_constraintStart_toStartOf="@+id/textView2"
            android:layout_marginTop="10dp"
            app:layout_constraintTop_toBottomOf="@+id/textView7"/>
    <TextView
            android:text="@string/post_url"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView9"
            app:layout_constraintStart_toStartOf="@+id/textView2"
            android:layout_marginTop="10dp"
            app:layout_constraintTop_toBottomOf="@+id/textView8"/>
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tvFormat"
            app:layout_constraintStart_toEndOf="@+id/textView2"
            android:layout_marginStart="30dp"
            app:layout_constraintTop_toTopOf="@+id/textView2"/>
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tvWidth"
            app:layout_constraintStart_toStartOf="@+id/tvFormat"
            android:layout_marginStart="0dp"
            android:layout_marginTop="10dp"
            app:layout_constraintTop_toBottomOf="@+id/tvFormat"/>
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tvHeight"
            app:layout_constraintStart_toStartOf="@+id/tvFormat"
            android:layout_marginStart="0dp"
            android:layout_marginTop="10dp"
            app:layout_constraintTop_toBottomOf="@+id/tvWidth"/>
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tvFilename"
            app:layout_constraintStart_toStartOf="@+id/tvFormat"
            android:layout_marginStart="0dp"
            android:layout_marginTop="10dp"
            app:layout_constraintTop_toBottomOf="@+id/tvHeight"/>
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tvId"
            app:layout_constraintStart_toStartOf="@+id/tvFormat"
            android:layout_marginStart="0dp"
            android:layout_marginTop="10dp"
            app:layout_constraintTop_toBottomOf="@+id/tvFilename"/>
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tvAuthor"
            app:layout_constraintStart_toStartOf="@+id/tvFormat"
            android:layout_marginStart="0dp"
            android:layout_marginTop="10dp"
            app:layout_constraintTop_toBottomOf="@+id/tvId"/>
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tvAuthorUrl"
            app:layout_constraintStart_toStartOf="@+id/tvFormat"
            android:layout_marginStart="0dp"
            android:layout_marginTop="10dp"
            app:layout_constraintTop_toBottomOf="@+id/tvAuthor"/>
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tvPostUrl"
            app:layout_constraintStart_toStartOf="@+id/tvFormat"
            android:layout_marginStart="0dp"
            android:layout_marginTop="10dp"
            app:layout_constraintTop_toBottomOf="@+id/tvAuthorUrl"/>
    <ImageView
            android:layout_width="0dp"
            android:layout_height="0dp"
            tools:srcCompat="@tools:sample/avatars"
            android:id="@+id/imageView"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="20dp"
            app:layout_constraintTop_toBottomOf="@+id/tvPostUrl"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="10dp"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginTop="20dp"/>
</androidx.constraintlayout.widget.ConstraintLayout>